# hackathon-todo-sdd

./: .gitignore  CLAUDE.md  README.md  hackathon-workflow.md  pyproject.toml
.specify/memory/: constitution.md
history/prompts/console-todo-app/: 003-specify-console-todo-app.spec.prompt.md  004-plan-console-todo-app.plan.prompt.md  005-generate-tasks-console-todo.tasks.prompt.md  006-implement-console-todo-app.green.prompt.md
history/prompts/constitution/: 002-define-project-constitution.constitution.prompt.md
history/prompts/general/: 001-read-codebase-and-remember.general.prompt.md
specs/001-console-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-console-todo-app/checklists/: requirements.md
specs/001-console-todo-app/contracts/: cli-commands.md
src/todo_app/: __init__.py  __main__.py  display.py  main.py  models.py  services.py
tests/: test_cli.py  test_models.py  test_services.py
