[project]
name = "todo-app"
version = "0.1.0"
description = "In-memory Python console Todo app with CLI interface"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/todo_app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/todo_app"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
